--- a/homepage/package.json
+++ b/homepage/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dndanli.github.io",
+  "homepage": "https://dndanli.github.io/dndanli-homepage",
   "name": "homepage",
   "version": "0.1.0",
   "private": true,
